fix(auth): fix register api call

--- a/apps/servers/email-templates/activation-mail.ejs
+++ b/apps/servers/email-templates/activation-mail.ejs
@@ -70,30 +70,30 @@
   <body>
     <div class="email-wrapper">
       <div class="email-header">
-        <h1>Welcome to food delivery</h1>
+        <h1>به فود دلیوری خوش آمدید</h1>
       </div>
       <div class="email-body">
-        <p>Hello <%= name %>,</p>
+        <p>سلام <%= name %>،</p>
         <p>
-          Thank you for registering with food delivery. To activate your account,
-          please use the following activation code:
+          از اینکه در فود دلیوری ثبت‌نام کرده‌اید سپاسگزاریم. برای فعال‌سازی حساب کاربری خود،
+          لطفاً از کد فعال‌سازی زیر استفاده کنید:
         </p>
         <h2><%= activationCode %></h2>
         <p>
-          Please enter this code on the activation page within the next 5
-          minutes.
+          لطفاً این کد را در صفحه فعال‌سازی طی ۵ دقیقه آینده وارد کنید.
         </p>
         <p>
-          If you did not register for a food delivery account, please ignore this
-          email.
+          اگر شما برای حساب فود دلیوری ثبت‌نام نکرده‌اید، لطفاً این ایمیل را نادیده بگیرید.
         </p>
       </div>
       <div class="email-footer">
         <p>
-          If you have any questions, please don't hesitate to contact us at
-          <a href="mailto:fooddelivery@becodemy.com">fooddelivery@becodemy.com</a>
+          در صورت داشتن هرگونه سوال، لطفاً با ما از طریق ایمیل
+          <a href="mailto:fooddelivery@becodemy.com">fooddelivery@yooosef.com</a>
+          در تماس باشید.
         </p>
       </div>
     </div>
   </body>
+  
 </html>
